tests/should_succeed/array_add.jou
import "stdlib/io.jou"

def main() -> int:
    a: int[2] = [1, 2]
    b: int[2] = [3, 4]
    c: int[2] = a + b
    printf("%d %d\n", c[0], c[1])  # Output: 4 6
    return 0
