tests/syntax_error/string_continue_on_next_line.jou
import "stdlib/io.jou"

# Output: compiler error in file "string_continue_on_next_line.jou", line 4: missing ' to end the byte literal
def main() -> int:
    a = '\
    't\''
    printf(a)
    return 0
